--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
     <head>
         <title>お疲れ様でした。</title>
-        <link href="style.css" rel="stylesheet" type="text/css">
         <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,87 +14,157 @@
     <body>
         <div id =content>
             <div id="firstblock">
-                <h2>さいしょはグー...</h2>
-                <img src="img/goo.png" />
+                <div class="blank"></div>
+                <h2 class="title">さいしょはグー...</h2>
+                <img class="handphoto" src="img/goo.png" />
 
-                <h2>じゃんけん...</h2>
-                <p>
-                    <button onclick="play(1)" class="btn">グー</button>
-                    <button onclick="play(2)" class="btn">チョキ</button>
-                    <button onclick="play(3)" class="btn">パー</button>
-                </p>
+                <h2 class="title">じゃんけん...</h2>
+                <div class="container">
+                    <button onclick="play(1)" class="button-37">グー</button>
+                    <button onclick="play(2)" class="button-37">チョキ</button>
+                    <button onclick="play(3)" class="button-37">パー</button>
+                </div>
             </div>
 
             <div id="secondblock" class="negative">
-                <p>コンピューターの手</p>
-                <img class="lose" width="150" src="img/goo.png">
-                <img class="lose" width="150" src="img/choki.png">
-                <img class="lose" width="150" src="img/paa.png">
+                <div class="blank"></div>
+                <p class="text">コンピューターの手</p>
+                <img class="lose handphoto" width="150" src="img/goo.png">
+                <img class="lose handphoto" width="150" src="img/choki.png">
+                <img class="lose handphoto" width="150" src="img/paa.png">
             
-                <p>あなたの手</p>
-                <img class="hands" width="150" src="img/goo.png">
-                <img class="hands" width="150" src="img/choki.png">
-                <img class="hands" width="150" src="img/paa.png">
+                <p class="text">あなたの手</p>
+                <img class="hands handphoto" width="150" src="img/goo.png">
+                <img class="hands handphoto" width="150" src="img/choki.png">
+                <img class="hands handphoto" width="150" src="img/paa.png">
                 
-                <h2>おめでとう！あなたの勝ちです</h2>
+                <h2 class="title">おめでとう！あなたの勝ちです</h2>
+
+                <div id="popup">
+                    おめでとうございます...<br>
+                    そして、お疲れ様でした...<br>
+                    <br>
+                    koredemo tukatte yukkuri yasundene.
+                </div>
             </div>
         </div>
 
         <div id="blocked" class="message" style="display: none;">
-            <img src="img/times.png" />
-            <button id="reset-button">キーを削除する</button>
+            <img src="img/timeflies.png" />
+            <button id="reset-button">reset</button>
         </div>
     </body>
 
     <script>
         function play (input) {
-            let target = document.getElementsByClassName("hands");
-            let element = document.getElementsByClassName("lose");
-            let erase = document.getElementById("firstblock");
-            let appear = document.getElementById("secondblock");
+            setTimeout(function() {
+                let target = document.getElementsByClassName("hands");
+                let element = document.getElementsByClassName("lose");
+                let erase = document.getElementById("firstblock");
+                let appear = document.getElementById("secondblock");
 
-            erase.classList.add("negative");
-            appear.classList.remove("negative")
+                erase.classList.add("negative");
+                appear.classList.remove("negative")
 
-            if (input == 1){
-                target[0].classList.add("active");
-                element[1].classList.add("active");
-            } else if (input == 2){
-                target[1].classList.add("active");
-                element[2].classList.add("active");
-            } else if (input == 3){
-                target[2].classList.add("active");
-                element[0].classList.add("active");
-            }
+                if (input == 1){
+                    target[0].classList.add("active");
+                    element[1].classList.add("active");
+                } else if (input == 2){
+                    target[1].classList.add("active");
+                    element[2].classList.add("active");
+                } else if (input == 3){
+                    target[2].classList.add("active");
+                    element[0].classList.add("active");
+                }
+            }, 1000);
+
+            setTimeout(function() {
+                let popup = document.getElementById("popup");
+                popup.classList.add("active");
+            }, 3000);
         }
 
-        (function() {
-            const ACCESS_KEY = 'user_accessed_site';
-            const content = document.getElementById('content');
-            const blocked = document.getElementById('blocked');
-            const resetButton = document.getElementById('reset-button');
+        // (function() {
+        //     const ACCESS_KEY = 'user_accessed_site';
+        //     const content = document.getElementById('content');
+        //     const blocked = document.getElementById('blocked');
+        //     const resetButton = document.getElementById('reset-button');
 
-            if (localStorage.getItem(ACCESS_KEY)) {
-                content.style.display = 'none';
-                blocked.style.display = 'block';
-            } else {
-                localStorage.setItem(ACCESS_KEY, 'true');
-            }
+        //     if (localStorage.getItem(ACCESS_KEY)) {
+        //         content.style.display = 'none';
+        //         blocked.style.display = 'block';
+        //     } else {
+        //         localStorage.setItem(ACCESS_KEY, 'true');
+        //     }
 
-            resetButton.addEventListener('click', () => {
-                localStorage.removeItem(ACCESS_KEY);
-                alert('キーを削除しました。このページを再読み込みしてください。');
-            });
-        })();
+        //     resetButton.addEventListener('click', () => {
+        //         localStorage.removeItem(ACCESS_KEY);
+        //         alert('キーを削除しました。このページを再読み込みしてください。');
+        //     });
+        // })();
       </script>
 
     <style>
         body{
-            padding:0;
+            height: 100vh;
             margin: 0;
+            padding: 0;
+            background: linear-gradient(60deg, rgba(200, 170, 222, 1), rgba(200, 198, 208, 1), rgba(200, 222, 175, 1));
         }
+
+        .handphoto{
+            width: 60%;
+            max-width: 200px;
+        }
+
+        .container{
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+        }
+        .button-37 {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+            width: 30%;
+            max-width: 200px;
+            margin: 10px;
+            padding: 0.2em 1em;
+            border: 1px solid #2589d0;
+            border-radius:100px;
+            background-color: transparent;
+            color: #2589d0;
+            font-size: clamp(10px, 3vw, 24px);
+        }
+        @media screen and (max-width: 500px) {
+            .container{
+                flex-direction: column;
+            }
+            .button-37 {
+                margin: 5px auto !important;
+                width: 60% !important;
+                font-size: 6vw !important;
+                max-width: 400px;
+            }
+        }
+        .button-37:focus {
+            color: transparent;
+        }
+        .button-37:focus::before {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: url('data:image/svg+xml;charset=utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2032%2032%22%20width%3D%2248%22%20height%3D%2248%22%20fill%3D%22%232589d0%22%3E%20%3Cpath%20d%3D%22M14%200%20H18%20V8%20H14%20z%22%20transform%3D%22rotate(0%2016%2016)%22%20opacity%3D%22.1%22%3E%20%3Canimate%20attributeName%3D%22opacity%22%20from%3D%221%22%20to%3D%22.1%22%20begin%3D%220%22%20dur%3D%221s%22%20repeatCount%3D%22indefinite%22%2F%3E%20%3C%2Fpath%3E%20%3Cpath%20d%3D%22M14%200%20H18%20V8%20H14%20z%22%20transform%3D%22rotate(45%2016%2016)%22%20opacity%3D%22.1%22%3E%20%3Canimate%20attributeName%3D%22opacity%22%20from%3D%221%22%20to%3D%22.1%22%20begin%3D%220.125s%22%20dur%3D%221s%22%20repeatCount%3D%22indefinite%22%2F%3E%20%3C%2Fpath%3E%20%3Cpath%20d%3D%22M14%200%20H18%20V8%20H14%20z%22%20transform%3D%22rotate(90%2016%2016)%22%20opacity%3D%22.1%22%3E%20%3Canimate%20attributeName%3D%22opacity%22%20from%3D%221%22%20to%3D%22.1%22%20begin%3D%220.25s%22%20dur%3D%221s%22%20repeatCount%3D%22indefinite%22%2F%3E%20%3C%2Fpath%3E%20%3Cpath%20d%3D%22M14%200%20H18%20V8%20H14%20z%22%20transform%3D%22rotate(135%2016%2016)%22%20opacity%3D%22.1%22%3E%20%3Canimate%20attributeName%3D%22opacity%22%20from%3D%221%22%20to%3D%22.1%22%20begin%3D%220.375s%22%20dur%3D%221s%22%20repeatCount%3D%22indefinite%22%2F%3E%20%3C%2Fpath%3E%20%3Cpath%20d%3D%22M14%200%20H18%20V8%20H14%20z%22%20transform%3D%22rotate(180%2016%2016)%22%20opacity%3D%22.1%22%3E%20%3Canimate%20attributeName%3D%22opacity%22%20from%3D%221%22%20to%3D%22.1%22%20begin%3D%220.5s%22%20dur%3D%221s%22%20repeatCount%3D%22indefinite%22%2F%3E%20%3C%2Fpath%3E%20%3Cpath%20d%3D%22M14%200%20H18%20V8%20H14%20z%22%20transform%3D%22rotate(225%2016%2016)%22%20opacity%3D%22.1%22%3E%20%3Canimate%20attributeName%3D%22opacity%22%20from%3D%221%22%20to%3D%22.1%22%20begin%3D%220.625s%22%20dur%3D%221s%22%20repeatCount%3D%22indefinite%22%2F%3E%20%3C%2Fpath%3E%20%3Cpath%20d%3D%22M14%200%20H18%20V8%20H14%20z%22%20transform%3D%22rotate(270%2016%2016)%22%20opacity%3D%22.1%22%3E%20%3Canimate%20attributeName%3D%22opacity%22%20from%3D%221%22%20to%3D%22.1%22%20begin%3D%220.75s%22%20dur%3D%221s%22%20repeatCount%3D%22indefinite%22%2F%3E%20%3C%2Fpath%3E%20%3Cpath%20d%3D%22M14%200%20H18%20V8%20H14%20z%22%20transform%3D%22rotate(315%2016%2016)%22%20opacity%3D%22.1%22%3E%20%3Canimate%20attributeName%3D%22opacity%22%20from%3D%221%22%20to%3D%22.1%22%20begin%3D%220.875s%22%20dur%3D%221s%22%20repeatCount%3D%22indefinite%22%2F%3E%20%3C%2Fpath%3E%3C%2Fsvg%3E') no-repeat center / 1.7em;
+            content: '';
+        }
+
         #firstblock,
         #secondblock{
+            position: relative;
             text-align: center;
         }
         .hands,
@@ -103,20 +172,52 @@
             display: none;
         }
         .active{
-            display: inline !important;
+            display: inline-block !important;
         }
         .negative{
             display: none !important;
         }
+        .text{
+            margin-top: 40px;
+            margin-bottom: 10px;
+            color: #2589d0;
+        }
+        .title{
+            color: #2589d0;
+        }
+        .blank{
+            width: 100vw;
+            height: 50px;
+        }
+
+        /*アクセス管理*/
         #blocked{
+            position: relative;
             width: 100%;
             height: 100vh;
         }
         #blocked > img{
+            position: absolute;
             width: 100%;
             height: 100vh;
             bottom: 0px;
             object-fit: cover; /* この一行を追加するだけ！ */
+            z-index: 2;
         }
+        #reset-button{
+            position: absolute;
+        }
+
+        #popup{
+            display: none;
+            position: absolute;
+            width: 80%;
+            height: 80vh;
+            top: 5%;
+            left: 10%;
+            border-radius: 10px;
+            background-color: aliceblue;
+        }
+
     </style>
 </html>
