--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
             width: 30px;
             height: 30px;
             font-size: 20px;
-            border-radius: 50%;  /* 丸みの度合い */
+            border-radius: 15px;  /* 丸みの度合い */
             border: none;
             background: #2589d0; /* ボタンの背景色 */
             color: aliceblue;
